Stable 0.0.2: Function: FullBright, NoBreakDelay